--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -18,7 +18,6 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -49,7 +48,8 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
+	
 }
 
 html, body {
@@ -64,3 +64,66 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+.container{
+	width: 900px;
+	margin: auto;
+	
+}
+
+header nav{
+	display:inline-block;
+	Margin-top: 35px;
+	text-align: center;
+}
+
+header .logo{
+	margin-left:140px;
+}
+
+header nav a{
+	margin: 0 20px;
+	
+}
+.intro-text{
+	display:inline-block;
+	font-size: 70px;
+	width:50%;
+	text-align: center;
+}
+div button{
+	padding: 10px 30px 10px;
+	margin-bottom:40px;
+	vertical-align: top;
+}
+.intro img{
+margin:3%;
+display:inline-block;
+vertical-align: middle;
+position: relative;
+
+}
+.Main-info{
+	display:block;
+	text-align: center;
+}
+.Main-info div{
+	display: inline-block;
+	width: 40%;
+	text-align:left;
+}
+div img{
+	
+}
+.service-info{
+	display:block;
+	text-align:center;
+}
+.service-info div{
+	display: inline-block;
+	width: 30%;
+	text-align:left;
+}
+.contact{
+display: block;
+text-align:left;
+}
